@@ -31,7 +31,8 @@
     </ul>
     In this tutorial RTI DDS is used to transfer data from the sender to the receiver.
     Since the sender and receiver are separate components, each use a DDS4CCM connector.<br/>
-    The exchanged data consists of a struct with the following members:
+    The exchanged data consists of a struct (ShapeType_msg) with the following
+    members:
     <ul>
       <li>color : represents the color of the shape.</li>
       <li>x : represents the location on the x-axis.</li>
@@ -50,11 +51,11 @@
     The receiver listens to DDS and receives the updates regarding the shapes data.
   </p>
   <img width="60%" height="40%" src="./images/system.png" />
-  <p><i><b>to-be-replaced</b></i></p>
-
   <p>
-    This tutorial runs in conjuntion with the RTI shapes demo, available for download from 
-    http://www.rti.com/downloads/index.html .
+    This tutorial doesn't work in conjuntion with the RTI Shapes demo
+    (available for download from http://www.rti.com/downloads/index.html). One
+    can use the Shapes example (%CIAO_ROOT%\connectors\dds4ccm\examples\Shapes)
+    for this.
   </p>
 
   <h2>Directory structure</h2>
